# tca-equipo2

./: .gitignore  README.md
airflow/: Dockerfile  requirements.txt
airflow/get_pretraining_data/: export_pretraining_data.sql  main.py
api/: Cargo.toml  Dockerfile  compose.yaml
api/libsql/: schema.sql
api/src/: app.rs  handler.rs  main.rs  model.rs  schema.rs
ml/: model_training.py
mvp/: AnalisisPrediccionPlatillos.pbix
tda/: clustering.ipynb
