[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
chrono = { version = "0.4.38", features = ["serde"] }
openssl = "0.10.64"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
sqlx = { version = "0.7.4", features = ["sqlite", "chrono", "runtime-tokio"] }
tokio = { version = "1.38.0", features = ["macros", "rt-multi-thread"] }
